--- a/README.adoc
+++ b/README.adoc
@@ -44,10 +44,10 @@ JAX-RS applications.
 
 You will document the RESTful APIs of the provided `inventory` service, which serves two endpoints, 
 `inventory/systems` and `inventory/properties`. These two endpoints function the same way as in the 
-other MicroProfile gudes.
+other MicroProfile guides.
 
 Before you proceed, note that the 1.0 version of the MicroProfile OpenAPI specification does 
-not define how the `/openapi` endpoint may be partiontioned in the event of multiple JAX-RS applications 
+not define how the `/openapi` endpoint may be partitioned in the event of multiple JAX-RS applications 
 running on the same server. In other words, you must stick to one JAX-RS application per server instance 
 as the behaviour for handling multiple applications is currently undefined.
 
@@ -128,7 +128,7 @@ the `src/main/java/io/openliberty/guides/inventory/InventoryResource.java` file:
 include::finish/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[tags=**;!copyright]
 ----
 
-There is quite a bit more annotations now, so lets break them down:
+Clearly, there are many more annotations now, so let's break them down:
 
 [cols="35, 200", options="header"]
 |===
@@ -391,7 +391,7 @@ file by using MicroProfile OpenAPI.
 Feel free to try one of the related MicroProfile guides. They demonstrate additional technologies that you
 can learn and expand on top of what you built here.
 
-For more in-depth examples of MicroProfile OpenAPI, try one of the demo applications avilable in the 
+For more in-depth examples of MicroProfile OpenAPI, try one of the demo applications available in the 
 MicroProfile OpenAPI
 https://github.com/eclipse/microprofile-open-api/tree/master/tck/src/main/java/org/eclipse/microprofile/openapi/apps[GitHub repository].
 
