Initial convert to multipane

--- a/README.adoc
+++ b/README.adoc
@@ -6,13 +6,13 @@
 // Contributors:
 //   IBM Corporation
 :projectid: microprofile-openapi
-:page-layout: guide
+:page-layout: guide-multipane
 :page-duration: 20 minutes
 :page-releasedate: 2018-03-16
 :page-guide-category: microprofile
 :page-essential: false
 :page-description: Explore how to document and filter RESTful APIs from code or static files by using MicroProfile OpenAPI.
-:page-tags: ['MicroProfile', 'OpenAPI', 'microservices', '@APIResponse', '@Schema', '@Content', '@Operation', '@Info', '@Parameter']
+:page-tags: ['MicroProfile']
 :page-permalink: /guides/{projectid}
 :page-related-guides: ['cdi-intro', 'microprofile-config']
 :common-includes: https://raw.githubusercontent.com/OpenLiberty/guides-common/master
@@ -397,3 +397,5 @@ https://github.com/eclipse/microprofile-open-api/tree/master/tck/src/main/java/o
 
 
 include::{common-includes}/finish.adoc[]
+include::https://raw.githubusercontent.com/OpenLiberty/guides-common/multipane/attribution.adoc[subs="attributes"]
+
