--- a/README.adoc
+++ b/README.adoc
@@ -339,7 +339,7 @@ Before you can use the filter class that you created, you need to create the `mi
 
 [role="code_command hotspot=1", subs="quotes"]
 ----
-Create the the configuration file.
+Create the configuration file.
 `src/main/webapp/META-INF/microprofile-config.properties`
 ----
 
@@ -350,7 +350,7 @@ include::finish/src/main/webapp/META-INF/microprofile-config.properties[tags=con
 ----
 
 This configuration file is picked up automatically by MicroProfile Config and registers your filter
-by passing in the fully qualified name of the filter class into the `mp.openapi.filter` property.
+by passing in the fully qualified name of the filter class into the [hotspot=1]`mp.openapi.filter` property.
 
 Finally, run the following command and refresh the {openapi-url} URL to see the updated OpenAPI tree.
 [role='command']
@@ -455,9 +455,16 @@ verify the document by visiting the {openapi-url} or the {openapi-url}/ui URL.
 
 A few tests are included for you to test the basic functionality of the `inventory` service. If a test
 failure occurs, then you might have introduced a bug into the code. These tests will run automatically
-as a part of the Maven build process when you run the `mvn install` command. You can also run these
-tests separately from the build by using the `mvn verify` command, but first make sure that the server is stopped.
-
+as a part of the Maven build process when you run the following command. 
+[role='command']
+```
+mvn install
+```
+You can also run these
+tests separately from the build by using the following command, but first make sure that the server is stopped.
+```
+mvn verify
+```
 
 // =================================================================================================
 // Great work! You're done!
