--- a/README.adoc
+++ b/README.adoc
@@ -123,19 +123,15 @@ Because all JAX-RS annotations are processed by default, you can augment the exi
 annotations without needing to rewrite portions of the OpenAPI document that are already covered by 
 the JAX-RS framework.
 
-Add OpenAPI annotations to the two JAX-RS methods, `getPropertiesForHost()` and `listContents()`.
-
-[role='code_command hotspot=32-46 file=0', subs="quotes"]
+[role='code_command file=0', subs="quotes"]
 ----
-#Add OpenApi annotations to `getPropertiesForHost()`.#
+#Update the `InventoryResource` class.#
 `src/main/java/io/openliberty/guides/inventory/InventoryResource.java`
 ----
 
-[role='code_command hotspot=70-81 file=0', subs="quotes"]
-----
-#Add OpenApi annotations to `listContents()`.#
-`src/main/java/io/openliberty/guides/inventory/InventoryResource.java`
-----
+[role="edit_command_text"]
+Add OpenAPI annotations to the two JAX-RS methods, [hotspot=32-46 file=0]`getPropertiesForHost()` and [hotspot=32-46 file=0]`listContents()`.
+
 
 InventoryResource.java
 [source, Java, linenums, role='code_column']
@@ -214,17 +210,14 @@ document doesn't have a very meaningful description of the `InventoryList` POJO 
 difficult to tell exactly what that POJO is used for. To describe the `InventoryList` POJO in more detail, augment the 
 `src/main/java/io/openliberty/guides/inventory/model/InventoryList.java` file with some OpenAPI annotations.
 
-[role='code_command hotspot=7 file=1', subs="quotes"]
+[role='code_command file=1', subs="quotes"]
 ----
-#Add the OpenApi annotation to the `InventoryList` class.#
+#Update the `InventoryList` class.#
 `src/main/java/io/openliberty/guides/inventory/model/InventoryList.java`
 ----
 
-[role='code_command hotspot=10 file=1', subs="quotes"]
-----
-#Add the OpenApi annotation to the `systems` variable.#
-`src/main/java/io/openliberty/guides/inventory/model/InventoryList.java`
-----
+[role='edit_command_text']
+Add OpenAPI annotations to the [hotspot=7 file=1]`InventoryList` class and the [hotspot=10 file=1]`systems` variable.
 
 InventoryList.java
 [source, Java, linenums, role='code_column']
@@ -235,23 +228,14 @@ include::finish/src/main/java/io/openliberty/guides/inventory/model/InventoryLis
 Likewise, annotate the `src/main/java/io/openliberty/guides/inventory/model/SystemData.java` POJO, 
 which is referenced in the `InventoryList` class.
 
-[role='code_command hotspot=6 file=2', subs="quotes"]
+[role='code_command file=2', subs="quotes"]
 ----
-#Add the OpenApi annotation to the `SystemData` class.#
+#Update the `SystemData` class.#
 `src/main/java/io/openliberty/guides/inventory/model/SystemData.java`
 ----
 
-[role='code_command hotspot=9 file=2', subs="quotes"]
-----
-#Add the OpenApi annotation to the `hostname` variable.#
-`src/main/java/io/openliberty/guides/inventory/model/SystemData.java`
-----
-
-[role='code_command hotspot=12 file=2', subs="quotes"]
-----
-#Add the OpenApi annotation to the `properties` variable.#
-`src/main/java/io/openliberty/guides/inventory/model/SystemData.java`
-----
+[role='edit_command_text']
+Add OpenAPI annotations to the [hotspot=6 file=2]`SystemData` class, the [hotspot=9 file=2]`hostname` variable and the [hotspot=12 file=2]`properties` variable.
 
 SystemData.java
 [source, Java, linenums, role="code_column"]
@@ -411,11 +395,14 @@ endpoint. To make use of this document, open this document in your favorite text
 all of its lines. Since this document is complete, you can also set the `mp.openapi.scan.disable` property 
 to `true` in the `src/main/webapp/META-INF/microprofile-config.properties` file.
 
-[role="code_command hotspot=1", subs="quotes"]
+[role="code_command hotspot", subs="quotes"]
 ----
-#Edit the configuration file.#
+#Update the configuration file.#
 `src/main/webapp/META-INF/microprofile-config.properties`
 ----
+
+[role="edit_command_text"]
+Set the [hotspot=1]`mp.openapi.scan.disable` property to `true`.
 
 microprofile-config.properties
 [source, text, linenums, role="code_column"]
